--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,7 @@
         TODO: Set the final name of the deployable jar here (the überjar)
         -->
         <bundle.name>yourWebApp-${project.version}</bundle.name>
-        <jetty.version>7.2.2.v20101205</jetty.version>
-        <glassfish-jsp-2.1.version>2.1.v20100127</glassfish-jsp-2.1.version>
+        <jetty.version>8.1.7.v20120910</jetty.version>
     </properties>
 
     <dependencies>
@@ -36,22 +35,6 @@
             <version>1.2</version>
             <scope>provided</scope>
         </dependency>
-
-        <!--
-        I prefer the Glassfish JSP implementation.
-        In the future jetty@eclipse may have packages for this.
-        -->
-        <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jsp-api-2.1-glassfish</artifactId>
-            <version>${glassfish-jsp-2.1.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jsp-2.1-glassfish</artifactId>
-            <version>${glassfish-jsp-2.1.version}</version>
-        </dependency>
-
         <!--
         Jetty artifacts. Note: They do have transitive dependencies.
         -->
@@ -68,6 +51,11 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+ 	<dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-jsp</artifactId>
             <version>${jetty.version}</version>
         </dependency>
 
@@ -108,6 +96,16 @@
                                     <mainClass>bekkopen.jetty.Main</mainClass>
                                 </transformer>
                             </transformers>
+			    <filters>
+                              	<filter>
+                                  <artifact>*:*</artifact>
+                                  <excludes>
+                                    <exclude>META-INF/*.SF</exclude>
+                                    <exclude>META-INF/*.DSA</exclude>
+                                    <exclude>META-INF/*.RSA</exclude>                                       
+                                  </excludes>
+                                </filter>
+                            </filters>
                         </configuration>
                     </execution>
                 </executions>
